@@ -5,6 +5,7 @@
 === 0.5.6 ===
 * Updated build (better support for BSD systems).
 * Fixed clang warnings.
+* Added set_native method to io::Path.
 
 === 0.5.5 ===
 * Added support of color parsing by expr::Tokenizer when using expr::TF_COLOR flag.
